SERVER-71386 Telemetry collection fails for queries with non-object fields